# apctui

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  install.sh
examples/: apctui.toml  mock_nis.rs
install/: apcupsd@.service  org.apctui.manage.policy
src/: app.rs  clientgen.rs  events.rs  lib.rs  main.rs  netutil.rs  nis.rs  notify.rs  options.rs  poller.rs  privileged.rs  registry.rs  service.rs  theme.rs
src/app/: clientgen.rs  editor.rs  mod.rs  options.rs  services.rs  units.rs
src/config/: diff.rs  mod.rs  parser.rs  schema.rs  validate.rs
src/ui/: clientgen.rs  dashboard.rs  detail.rs  editor.rs  events.rs  help.rs  mod.rs  options.rs  services.rs  units.rs  widgets.rs
templates/: client.conf.tmpl
tests/: editor_flow.rs  notify_flow.rs  options_flow.rs  render.rs  units_flow.rs
