[package]
name = "apctui"
version = "0.4.0"
edition = "2021"
rust-version = "1.85"
description = "Slick TUI monitor & manager for apcupsd — multi-UPS aware"
license = "GPL-3.0-or-later"
keywords = ["apcupsd", "ups", "tui", "monitor"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
