[package]
name = "apctui"
version = "0.4.0"
edition = "2021"
rust-version = "1.85"
description = "Slick TUI monitor & manager for apcupsd — multi-UPS aware"
license = "GPL-3.0-or-later"
repository = "https://github.com/b3p3k0/apctui"
keywords = ["apcupsd", "ups", "tui", "monitor"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = "0.29"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
toml_edit = "0.22"
ureq = { version = "2", features = ["json"] }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
